LM-608 #comment Updated logo quality. Fixes for category cards. Removed cutoff shadow from cards.

--- a/styles.scss
+++ b/styles.scss
@@ -229,7 +229,6 @@ h2 {
 		.category {
 			background: #F8F8F8;
 			border-color: $contentBorder;
-			@extend .box-shadow;
 			text-decoration: none;
 
 			&:hover {
@@ -243,8 +242,8 @@ h2 {
 				margin-bottom: 3px;
 
 				@media (screen and min-width: 600px) {
-					margin-bottom: 20px;
-					width: 48.1%;
+					width: 47.77%;
+					margin: 0 1% 20px;
 				}
 			}
 		}
@@ -323,6 +322,8 @@ h2 {
 		background: url('logo_cj_secondary.png') no-repeat 0 0 transparent;
 		width: 210px;
 		height: 40px;
+		background-size: 210px 40px;
+		background-size: 100%;
 		margin-left: 0;
 
 		span {
@@ -337,8 +338,6 @@ h2 {
 		@include breakpoint(small-device-higher) {
 			padding-top: 0;
 		}
-
-		
 		
 		li {
 			a {
@@ -402,7 +401,6 @@ h2 {
 			margin-right: -20px;
 			padding: 20px 40px;
 			margin-bottom: 0;
-
 
 			@include breakpoint(small-device-higher) {
 				padding: 20px 20px;
